fix(task-meta): correct vertical alignment of remove icon
the previous was not generic enough

Related to CAM-6127

--- a/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
+++ b/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
@@ -31,12 +31,8 @@
     }
   }
 
-  a {
-    &.unclaim,
-    &.reset-due-date,
-    &.reset-follow-up-date {
-      vertical-align: top;
-    }
+  .glyphicon-remove {
+    vertical-align: top;
   }
 
   .groups,
